@startuml
skinparam classAttributeIconSize 0
skinparam Shadowing true

skinparam class {
    ArrowColor Purple
    BackgroundColor Pink
    BorderColor Purple
}

skinparam note {
    BackgroundColor LightYellow
    BorderColor Purple
}

namespace flyweight #A9F5F2 {

    class Bosque {
        - LIMITE_ARBOLES : int
        + plantarArboles() : void
        + mostrarArboles() : void
    }

    class ArbolFactory {
        - tiposDeArboles
        + agregarArbol(tipo) : void
        + mostrarArboles() : void
        - crearArbol(tipo) : Arbol
    }

    class Arbol {
        - alto : int
        - ancho : int
        - color : String
        - tipo : String
        + equals() : boolean
        + hashCode() : int
        + toString() : String
    }

    ArbolFactory "1" *-- "*" Arbol
    Bosque *-- ArbolFactory
}
@enduml